@@ -341,6 +341,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SmartBase MP390  (EXPERIMENTAL)(*2)
        Canon MultiPASS MP390  (EXPERIMENTAL)(*2)
 
+       Canon MP450 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP450   (EXPERIMENTAL)(*2)
+
+       Canon MP460 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP460   (EXPERIMENTAL)(*2)
+
        Canon MP470 series  (EXPERIMENTAL)(*1)
        Canon PIXUS MP470   (EXPERIMENTAL)(*2)
        Canon PIXMA MP476   (EXPERIMENTAL)(*2)
